@@ -6,6 +6,7 @@ Builder class for a stage2 installation tarball build.
 from catalyst.support import *
 from generic_stage import *
 import catalyst.util
+import catalyst.hash
 
 class stage2_target(generic_stage_target):
 	def __init__(self,spec,addlargs):
@@ -21,7 +22,7 @@ class stage2_target(generic_stage_target):
 			if os.path.isfile(self.settings["source_path"]):
 				if os.path.exists(self.settings["source_path"]):
 				# XXX: Is this even necessary if the previous check passes?
-					self.settings["source_path_hash"]=generate_hash(self.settings["source_path"],\
+					self.settings["source_path_hash"]=catalyst.hash.generate_hash(self.settings["source_path"],\
 						hash_function=self.settings["hash_function"],verbose=False)
 		print "Source path set to "+self.settings["source_path"]
 		if os.path.isdir(self.settings["source_path"]):
