@@ -3,6 +3,13 @@
 # Distributed under the GPL v2
 
   11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
+  +modules/catalyst/hash.py, modules/catalyst/support.py,
+  modules/catalyst/target/generic_stage.py,
+  modules/catalyst/target/livecd_stage2.py,
+  modules/catalyst/target/stage2.py, modules/catalyst/util.py:
+  Move all hash and contents functions to catalyst.hash
+
+  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
   modules/catalyst/util.py:
   Move countdown() from catalyst.support to catalyst.util
